fixed spacing for subpages

--- a/HTML/_assets/less/modules/structure.less
+++ b/HTML/_assets/less/modules/structure.less
@@ -45,7 +45,12 @@
 	}
 
 	.is-subpage & {
-		margin-top: 90px;
+		margin-top: 110px;
+		padding-top: 0;
+
+		@media (min-width: @screen-sm) {
+			padding-top: 60px;
+		}
 	}
 
 	.content {
